<resources>
    <string name="app_name">MateCheck</string>
    <string name="author_name">Created by Dávid Hreško</string>
    <string name="reg">Create account</string>
    <string name="login">Log in</string>
    <string name="login_full">Login</string>
    <string name="logout">Logout</string>
    <string name="hint_email">Your email</string>
    <string name="hint_password">Password</string>
    <string name="username">%1$s %2$s</string>

    <string name="reg_name">Introduce yourself</string>
    <string name="hint_name">First name</string>
    <string name="hint_surname">Surname</string>
    <string name="next">Next</string>
    <string name="photo_placeholder">Your photo</string>
    <string name="sign_up">Sign up</string>
    <string name="password_help">Must contain at least 8 characters</string>

    <string name="reg_account">Setup your account</string>
    <string name="google_login">Continue with google</string>
    <string name="login_error">This email and password combination is incorrect.</string>

    <string name="title_groups">Groups</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_profile">Profile</string>
    <string name="groups_text">Groups</string>
    <string name="search">Search</string>

    <string name="add_members">Add members</string>
    <string name="group_name_hint">Group name</string>
    <string name="group_name">Name your group</string>
    <string name="group_members">Members</string>
    <string name="create">Create</string>
    <string name="groups_info">Your groups</string>

    <string name="group_task_add">Add task</string>
    <string name="empty_tasks">There are currently no tasks.</string>

    <string name="task_description">Task setup</string>
    <string name="task_description_label">Description</string>
    <string name="task_priority_label">Priority</string>
    <string name="priority_high">High</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_low">Low</string>
    <string name="task_expiration">Expiration</string>

    <string name="assign_task">Assign task</string>
    <string name="task_name">Name</string>
    <string name="set_expiration">Expiration date</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_friends">Add Friends</string>
    <string name="friends">Friends</string>
    <string name="default_counter">0</string>
    <string name="your_tasks">Your tasks</string>
    <string name="task_counter">%1$d completed, %2$d in progress</string>
    <string name="groups_counter">%1$d total</string>
    <string name="create_group">Create new</string>
    <string name="favourite">Favourite</string>
    <string name="group_card_completed_task">
        <b>%1$d</b>
        Completed
    </string>
    <string name="group_card_in_progress_task">
        <b>%1$d</b>
        In progress
    </string>
</resources>

