<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@drawable/gradient_grey"
        tools:context=".home.groups.tasks.AddTaskDescriptionFragment">

    <ImageView
            android:id="@+id/add_task_description_back_button"
            style="@style/backButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_task_description_headline"
            style="@style/textHeadline"
            app:layout_constraintTop_toBottomOf="@id/add_task_description_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/task_description"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_task_name_input_layout"
            style="@style/textInputLayoutFilled"
            android:hint="@string/task_name"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/add_task_description_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_name_input"
                android:singleLine="true"
                android:textSize="18sp"
                android:layout_height="60dp"
                android:textCursorDrawable="@drawable/cursor_green"
                style="@style/textInput"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_task_expiration_input_layout"
            style="@style/textInputLayoutFilled"
            android:hint="@string/set_expiration"
            android:layout_margin="16dp"
            app:startIconDrawable="@drawable/ic_date_range_black_24dp"
            app:startIconTint="@android:color/white"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/add_task_name_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_expiration_input"
                android:singleLine="true"
                android:focusable="false"
                android:clickable="true"
                android:textSize="18sp"
                android:layout_height="60dp"
                android:longClickable="false"
                android:textCursorDrawable="@drawable/cursor_green"
                android:cursorVisible="false"
                style="@style/textInput"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/task_description_priority_label"
            style="@style/textLabel"
            android:text="@string/task_priority_label"
            android:paddingBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_task_expiration_input_layout"/>

    <RadioGroup
            android:id="@+id/task_description_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/task_description_priority_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="start"
            android:orientation="horizontal">
        <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/task_description_radio_button_low"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorPrimary"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:text="@string/priority_low"/>
        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/task_description_radio_button_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorPrimary"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:checked="true"
                android:text="@string/priority_medium"/>
        <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/task_description_radio_button_high"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorPrimary"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:text="@string/priority_high"/>
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/add_task_description_next_button"
            style="@style/circledButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/task_description_radio_group"
            app:layout_constraintVertical_bias="0.929"/>

    <ProgressBar
            android:id="@+id/task_description_progressBar"
            style="@style/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>