<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.WelcomeFragment">

    <ImageView
            android:id="@+id/welcome_brand_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/brand"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.20"
            android:layout_marginStart="16dp"/>

    <TextView
            android:id="@+id/welcome_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:layout_margin="8dp"
            app:layout_constraintStart_toEndOf="@id/welcome_brand_image"
            app:layout_constraintBottom_toBottomOf="@+id/welcome_brand_image"
            app:layout_constraintTop_toTopOf="@+id/welcome_brand_image"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_create_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome_google_button"
            android:text="@string/reg"
            android:backgroundTint="@android:color/white"
            app:cornerRadius="35dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_google_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome_login_button"
            android:text="@string/google_login"
            android:backgroundTint="#4285F4"
            app:cornerRadius="35dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/welcome_author_text"
            android:text="@string/login"
            android:backgroundTint="@color/colorPrimary"
            app:cornerRadius="35dp"
            android:padding="12dp"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_marginBottom="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"/>

    <TextView
            android:id="@+id/welcome_author_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="16sp"
            android:layout_margin="16dp"
            android:textColor="@android:color/white"
            android:textAlignment="center"/>

    <ProgressBar
            android:id="@+id/welcome_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:indeterminateTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>