<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.LoginFragment">

    <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_text"
            android:src="@drawable/ic_keyboard_arrow_left_white_40dp"/>

    <TextView
            android:id="@+id/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="80dp"
            app:layout_constraintVertical_bias="0.082"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@android:color/white"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="0.259">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textCursorDrawable="@drawable/cursor"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:hintTextColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/login_email_input_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/white"
            android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/login_error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/login_password_input_layout"
            android:text="@string/login_error"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:textAlignment="viewStart"
            android:layout_margin="16dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login_password_input_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/login_full"
            android:alpha="0.5"
            android:enabled="false"
            android:backgroundTint="@android:color/white"
            app:cornerRadius="35dp"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            app:layout_constraintVertical_bias="0.265"/>

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>