<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_login"
        tools:context=".login.RegistrationSecondFragment">

    <ImageView
            android:id="@+id/registration_account_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registration_account_text"
            android:src="@drawable/ic_keyboard_arrow_left_white_40dp"/>

    <TextView
            android:id="@+id/registration_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_account"
            android:textSize="32sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="0.082"
            app:layout_constraintHorizontal_bias="0.502"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_account_email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextColor="@android:color/white"
            android:hint="@string/hint_email"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:layout_constraintTop_toBottomOf="@id/registration_account_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="204dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintVertical_bias="0.259">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_account_email_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/cursor"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registration_account_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            app:hintTextColor="@android:color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:helperText="@string/password_help"
            app:helperTextTextColor="@android:color/white"
            app:helperTextEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/registration_account_email_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:endIconMode="password_toggle"
            app:endIconTint="@android:color/white"
            android:layout_margin="16dp">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registration_account_password_input"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/cursor"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_account_next_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_account_password_layout"
            android:text="@string/sign_up"
            android:enabled="false"
            android:textColor="@android:color/black"
            android:backgroundTint="@android:color/white"
            android:alpha="0.6"
            app:cornerRadius="35dp"
            android:textAllCaps="false"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_margin="16dp"
            app:layout_constraintVertical_bias="0.929" android:layout_marginEnd="16dp"/>

    <ProgressBar
            android:id="@+id/registration_account_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>