<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_grey"
        tools:context=".home.groups.tasks.AddTaskMembersFragment">

    <ImageView
            android:id="@+id/add_task_members_back_button"
            style="@style/backButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_task_members_next_button"
            style="@style/nextTextButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/add_task_members_headline"
            style="@style/textHeadline"
            app:layout_constraintTop_toBottomOf="@id/add_task_members_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/assign_task"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_task_members_input_layout"
            style="@style/textInputLayoutOutlined"
            android:hint="@string/search"
            android:layout_marginTop="16dp"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:startIconDrawable="@drawable/ic_search_black_24dp"
            app:layout_constraintTop_toBottomOf="@id/add_task_members_headline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_task_members_input"
                android:singleLine="true"
                style="@style/textInput"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_task_members_added_users_recycler"
            style="@style/recyclerViewHorizontal"
            app:layout_constraintTop_toBottomOf="@id/add_task_members_input_layout"
            app:layout_constraintBottom_toTopOf="@id/add_task_members_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/add_task_members_label"
            style="@style/textLabel"
            app:layout_constraintTop_toBottomOf="@id/add_task_members_added_users_recycler"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/group_members"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/add_task_members_recycler"
            style="@style/recyclerViewVertical"
            app:layout_constraintTop_toBottomOf="@id/add_task_members_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
            android:id="@+id/add_task_members_progressBar"
            style="@style/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>